--- a/.pep8speaks.yml
+++ b/.pep8speaks.yml
@@ -6,7 +6,7 @@ message:  # Customize the comment made by the bot
     updated:  # Messages when new commits are added to the PR
         header: ""
         footer: ""
-    no_errors: ""
+    no_errors: "No PEP8 issues."
 
 scanner:
     diff_only: False  # If True, errors caused by only the patch are shown
