--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ language: python
 matrix:
     include:
         - python: 2.7
+          env: NUMPY_VERSION=1.13
+
+        - python: 3.6
           env: NUMPY_VERSION=1.12
 
         - python: 3.6
-          env: NUMPY_VERSION=1.12 COVERALLS=true BUILD_DOCS=true
-
+          env: NUMPY_VERSION=1.13 COVERALLS=true BUILD_DOCS=true
 
 sudo: false
 
@@ -20,8 +22,6 @@ addons:
             texlive-latex-extra
             dvipng
 
-# Enable cache for $HOME/.cache/pip (wheels and such)
-cache: pip
 
 # Setup numpy + scipy using miniconda
 # See http://conda.pydata.org/docs/travis.html
@@ -41,7 +41,7 @@ install:
     - conda info -a
 
     # Install dependencies and enter test environment. Use conda for the minimal stuff to
-    # make it run faster and avoid downloading bug stuff like mkl
+    # make it run faster and avoid downloading big stuff like mkl
     - conda create -n testenv python=$TRAVIS_PYTHON_VERSION nomkl pywavelets
     - source activate testenv
     # We avoid annoying issues with building pyfftw wheels by using a conda-forge version
