--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ matrix:
           env: NUMPY_VERSION=1.12
 
         - python: 3.6
-          env: NUMPY_VERSION=1.13 COVERALLS=true BUILD_DOCS=true
+          env: NUMPY_VERSION=1.13 COVERALLS=true
+
+        - python: 3.6
+          env: NUMPY_VERSION=1.13 SKIP_TESTS=true BUILD_DOCS=true
 
 sudo: false
 
@@ -63,11 +66,13 @@ script:
     # Run tests and produce a coverage report.
     # Also invoke the alternative way of running the unit tests.
     # Fail immediately after first failure to speed up the whole thing.
-    - pytest --doctest-modules --cov --cov-report term-missing $TRAVIS_BUILD_DIR/odl || exit -1
-    - python -c "import odl; odl.test()" || exit -1
+    - if [[ "$SKIP_TESTS" != "true" ]]; then
+        pytest --doctest-modules --cov --cov-report term-missing $TRAVIS_BUILD_DIR/odl || exit -1;
+        python -c "import odl; odl.test()" || exit -1;
+      fi
     # Build the Sphinx doc (only for one specific build, master branch, no PR)
     # To avoid clogging the logs, we redirect stderr to /dev/null
-    - if [[ "$BUILD_DOCS" == "true" && "$TRAVIS_BRANCH" == "master" && "$TRAVIS_PULL_REQUEST" == "false" ]]; then
+    - if [[ "$BUILD_DOCS" == "true" ]]; then
         cd $TRAVIS_BUILD_DIR/doc/source && python generate_doc.py && cd -;
         travis-sphinx build -n -s $TRAVIS_BUILD_DIR/doc/source 2>/dev/null;
       fi
