TEMP: let travis-sphinx print errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ script:
     # To avoid clogging the logs, we redirect stderr to /dev/null
     - if [[ "$BUILD_DOCS" == "true" ]]; then
         cd $TRAVIS_BUILD_DIR/doc/source && python generate_doc.py && cd -;
-        travis-sphinx build -n -s $TRAVIS_BUILD_DIR/doc/source 2>/dev/null;
+        travis-sphinx build -n -s $TRAVIS_BUILD_DIR/doc/source;
       fi
 
 after_success:
