BLD: fix travis doc build and pep8speaks name warning

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ install:
 
     # Doc dependencies
     - if [[ "$BUILD_DOCS" == "true" ]]; then
-        pip install "sphinx<1.7" sphinx_rtd_theme travis-sphinx;
+        pip install "sphinx>=1.7" sphinx_rtd_theme "travis-sphinx>=2.1.2";
       fi
 
     # Install our package
