--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ install:
     - conda create -n testenv python=$TRAVIS_PYTHON_VERSION nomkl pywavelets
     - source activate testenv
     # Install packages with pip if possible, it's way faster
-    - pip install "numpy==$NUMPY_VERSION" scipy future scikit-image pytest pytest-cov;
+    - pip install "numpy==$NUMPY_VERSION" scipy future packaging scikit-image pytest pytest-cov;
     # Building pyfftw wheels sometimes fails, using a conda-forge version instead
     - conda install -c conda-forge pyfftw
 
