--- a/.travis.yml
+++ b/.travis.yml
@@ -54,8 +54,10 @@ install:
     - source activate testenv
     # Install packages with pip if possible, it's way faster
     - pip install "numpy==$NUMPY_VERSION" scipy future packaging scikit-image pywavelets pytest pytest-cov;
-    # Building pyfftw wheels sometimes fails, using a conda-forge version instead
-    - conda install -c conda-forge --no-update-deps pyfftw
+    # Building pyfftw wheels sometimes fails, using a conda-forge version instead;
+    # To avoid a lower version of NumPy being installed over the pip one, we exclude all dependencies
+    # (PyFFTW only depends on NumPy)
+    - conda install -c conda-forge --no-deps pyfftw
 
     # Doc dependencies
     - if [[ "$BUILD_DOCS" == "true" ]]; then
