--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,11 +1,11 @@
 package:
     name: odl
-    version: "0.6.1"
+    version: "1.0.0.dev"
 
 source:
     git_url: https://github.com/odlgroup/odl
-    git_rev: master  # for testing, put any branch here
-    # git_rev: v0.6.0  # release
+    git_rev: master  # development
+    # git_rev: v0.7.0  # release
     # git_rev: a542c12d23da7fa5b92b360a51ea14e4804c58f6  # intermediate bugfix revision
     # path: ..  # for builds from local source (no download)
 
@@ -17,20 +17,28 @@ requirements:
     build:
         - python
         - setuptools
+
+    host:
+        - python
+        - setuptools
         - nomkl # [not win]
         - future >=0.14
         - numpy >=1.10
         - scipy >=0.14
+        - packaging >=15.0
+
     run:
         - python
         - future >=0.14
-        - nomkl # [not win]
         - numpy >=1.10
         - scipy >=0.14
+        - packaging >=15.0
         - matplotlib
-        - pytest >=3.0.3
 
 test:
+    requires:
+        - nomkl # [not win]
+        - pytest >=3.0.3,<3.7
     imports:
         - odl
     commands:
