--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,11 +1,11 @@
 package:
     name: odl
-    version: "0.6.1"
+    version: "0.7.0"
 
 source:
     git_url: https://github.com/odlgroup/odl
-    git_rev: master  # development
-    # git_rev: v0.7.0  # release
+    # git_rev: master  # development
+    git_rev: v0.7.0  # release
     # git_rev: a542c12d23da7fa5b92b360a51ea14e4804c58f6  # intermediate bugfix revision
     # path: ..  # for builds from local source (no download)
 
