MAINT: Standardization of PEP8

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,9 @@
 # 3. If at all possible, it is good practice to do this. If you cannot, you
 # will need to generate wheels for each Python version that you support.
 universal=1
+
+[pycodestyle]
+ignore = E402, E741, W503, W504
+max-line-length = 79
+statistics = True
+exclude = .git,__init__.py
