REL: add a few more classifiers to package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,15 @@ classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
     Intended Audience :: Science/Research
+    Intended Audience :: Education
     Topic :: Scientific/Engineering
     Topic :: Scientific/Engineering :: Mathematics
+    Topic :: Scientific/Engineering :: Artificial Intelligence
+    Topic :: Scientific/Engineering :: Physics
+    Topic :: Scientific/Engineering :: Medical Science Apps.
     Topic :: Software Development
+    Topic :: Software Development :: Libraries
+    Topic :: Software Development :: Libraries :: Python Modules
     License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
