BLD: move metadata to setup.cfg (#1472)
* BLD: move metadata to setup.cfg

* BLD: change Travis script to not require test_requirements.txt

* REL: add a few more classifiers to package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,113 @@
-[bdist_wheel]
-# This flag says that the code is written to work on both Python 2 and Python
-# 3. If at all possible, it is good practice to do this. If you cannot, you
-# will need to generate wheels for each Python version that you support.
-universal=1
+[metadata]
+name = odl
+version = attr: odl.__version__
+description = Operator Discretization Library
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = Jonas Adler, Holger Kohr, and the ODL Contributors
+author_email = odl@math.kth.se
+license = MPL-2.0
+license_file = LICENSE
+url = https://github.com/odlgroup/odl
+download_url = https://github.com/odlgroup/odl/archive/master.zip
+platforms = any
+keywords = research, development, mathematics, prototyping, imaging, tomography
+classifiers =
+    Development Status :: 4 - Beta
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    Intended Audience :: Education
+    Topic :: Scientific/Engineering
+    Topic :: Scientific/Engineering :: Mathematics
+    Topic :: Scientific/Engineering :: Artificial Intelligence
+    Topic :: Scientific/Engineering :: Physics
+    Topic :: Scientific/Engineering :: Medical Science Apps.
+    Topic :: Software Development
+    Topic :: Software Development :: Libraries
+    Topic :: Software Development :: Libraries :: Python Modules
+    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Operating System :: OS Independent
 
-[pycodestyle]
+[options]
+packages = find:
+install_requires =
+    future >=0.14
+    packaging >=15.0
+    numpy >=1.10,!=1.14.0,!=1.14.1,!=1.14.2
+    scipy >=0.14
+python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
+tests_require =
+    pytest >=3.0.3
+    pytest-pep8
+    pytest-cov
+    coverage >=4.0
+    coveralls
+include_package_data = True
+
+[options.packages.find]
+exclude =
+    docs
+    examples
+
+[options.package_data]
+tests = odl/test, odl/pytest.ini
+
+[options.extras_require]
+testing =
+    pytest >=3.0.3
+    pytest-pep8
+    pytest-cov
+    coverage >=4.0
+    coveralls
+all =
+    pytest >=3.0.3
+    pytest-pep8
+    pytest-cov
+    coverage >=4.0
+    coveralls
+    matplotlib
+    pyfftw
+    pywavelets >= 1.0.1
+    scikit-image
+
+
+[options.entry_points]
+pytest11 = odl_plugins=odl.util.pytest_config
+
+[bdist_wheel]
+universal = 1
+
+[tool:pytest]
+minversion = 3.0.3
+markers = not benchmark and not largescale
+testpaths = odl
+doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS
+addopts = --doctest-modules
+xfail_strict=true
+
+[tool:isort]
+# Options: https://github.com/timothycrosley/isort#configuring-isort
+line_length = 79
+multi_line_output = 4
+
+[tool:pycodestyle]
 ignore = E402, E741, W503, W504
 max-line-length = 79
 statistics = True
-exclude = .git,__init__.py
+exclude =
+    .git
+    __init__.py
+
+[tool:flake8]
+# Options: http://flake8.pycqa.org/en/latest/user/configuration.html
+# Error codes: http://flake8.pycqa.org/en/latest/user/error-codes.html
+max-line-length = 79
+exclude =
+    .git
+    __pycache__
