MAINT: move coverage config to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ url = https://github.com/odlgroup/odl
 download_url = https://github.com/odlgroup/odl/archive/master.zip
 platforms = any
 keywords = research, development, mathematics, prototyping, imaging, tomography
+# See https://pypi.org/classifiers/
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
@@ -111,3 +112,55 @@ max-line-length = 79
 exclude =
     .git
     __pycache__
+
+[coverage:run]
+branch = False
+include =
+    odl/*
+omit =
+    */__init__.py
+    odl/diagnostics/*
+    odl/util/*
+
+    # Omit until we add ASTRA to our CI pipelines
+    odl/tomo/operators/ray_trafo.py
+    odl/tomo/backends/*
+
+[coverage:report]
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain about missing debug-only code:
+    if self\.debug
+
+    # Printing-related functions
+    def __str__
+    def __repr__
+
+    # Don't complain if tests don't hit defensive assertion code:
+    assert False
+    raise AssertionError
+    raise NotImplementedError
+    return NotImplemented
+
+    # Skip imports and __all__
+    import *
+    __all__
+
+    # Decorators
+    @property
+    @staticmethod
+    @classmethod
+
+    # Don't complain if non-runnable code isn't run:
+    if 0:
+    if False:
+    if __name__ == '__main__':
+
+ignore_errors = True
+
+[coverage:html]
+directory = htmlcov
+
