TST: improve list of excludes from coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -119,8 +119,12 @@ include =
     odl/*
 omit =
     */__init__.py
+    odl/test/*
     odl/diagnostics/*
-    odl/util/*
+    odl/util/graphics.py
+    odl/util/npy_compat.py
+    odl/util/pytest_config.py
+    odl/util/testutils.py
 
     # Omit until we add ASTRA to our CI pipelines
     odl/tomo/operators/ray_trafo.py
@@ -131,9 +135,6 @@ omit =
 exclude_lines =
     # Have to re-enable the standard pragma
     pragma: no cover
-
-    # Don't complain about missing debug-only code:
-    if self\.debug
 
     # Printing-related functions
     def __str__
