Exclude defs and such from coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -136,10 +136,6 @@ exclude_lines =
     # Have to re-enable the standard pragma
     pragma: no cover
 
-    # Printing-related functions
-    def __str__
-    def __repr__
-
     # Don't complain if tests don't hit defensive assertion code:
     assert False
     raise AssertionError
@@ -154,6 +150,11 @@ exclude_lines =
     @property
     @staticmethod
     @classmethod
+
+    # Definitions, docstrings
+    def *
+    class *
+    """
 
     # Don't complain if non-runnable code isn't run:
     if 0:
