Remove decorators, add entry points to coverage skip

--- a/setup.cfg
+++ b/setup.cfg
@@ -121,6 +121,7 @@ omit =
     */__init__.py
     odl/test/*
     odl/diagnostics/*
+    odl/space/entry_points.py
     odl/util/graphics.py
     odl/util/npy_compat.py
     odl/util/pytest_config.py
@@ -145,11 +146,6 @@ exclude_lines =
     # Skip imports and __all__
     import *
     __all__
-
-    # Decorators
-    @property
-    @staticmethod
-    @classmethod
 
     # Don't complain if non-runnable code isn't run:
     if 0:
