--- a/setup.cfg
+++ b/setup.cfg
@@ -39,8 +39,10 @@ classifiers =
 packages = find:
 install_requires =
     future >=0.14
+    cython
     packaging >=15.0
     numpy >=1.10,!=1.14.0,!=1.14.1,!=1.14.2
+    pyNFFT @ git+ssh://git@github.com/ghisvail/pyNFFT.git@e2da0af#egg=pyNFFT
     scipy >=0.14
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
 tests_require =
@@ -150,4 +152,3 @@ ignore_errors = True
 
 [coverage:html]
 directory = htmlcov
-
