--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,16 @@ install:
       else
         wget -q https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       fi
+    # Necessary to install pyNFFT
+    - if [ $TRAVIS_PYTHON_VERSION == "3.4" ]; then
+        export CPLUS_INCLUDE_PATH=/usr/include/python3.4m;
+      fi
+    - if [ $TRAVIS_PYTHON_VERSION == "3.5" ]; then
+        export CPLUS_INCLUDE_PATH=/opt/python/3.5.6/include/python3.5m;
+      fi
+    - if [ $TRAVIS_PYTHON_VERSION == "3.6" ]; then
+        export CPLUS_INCLUDE_PATH=/opt/python/3.6.3/include/python3.6m;
+      fi
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
     - hash -r
@@ -53,7 +63,7 @@ install:
     - conda create -n testenv python=$TRAVIS_PYTHON_VERSION nomkl
     - source activate testenv
     # Install packages with pip if possible, it's way faster
-    - pip install "numpy==$NUMPY_VERSION" scipy future packaging scikit-image pywavelets;
+    - pip install "numpy==$NUMPY_VERSION" scipy future packaging scikit-image pywavelets cython git+https://github.com/ghisvail/pyNFFT.git;
     # Building pyfftw wheels sometimes fails, using a conda-forge version instead;
     # To avoid a lower version of NumPy being installed over the pip one, we exclude all dependencies
     # (PyFFTW only depends on NumPy)
