added nfft install to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,8 @@ install:
 
     # Install our package
     - pip install -e .[testing]
+    # Install nfft
+    - sudo apt install -y libnfft3-dev
 
 script:
     # Run tests and produce a coverage report.
