--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,8 @@ install:
         wget -q https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       fi
     # Necessary to install pyNFFT
-    # - if [ $TRAVIS_PYTHON_VERSION == "3.6" ]; then
-    #     export CPLUS_INCLUDE_PATH=/opt/python/3.6.3/include/python3.6m;
+    - if [ $TRAVIS_PYTHON_VERSION == "3.6" ]; then
+        export CPLUS_INCLUDE_PATH=/opt/python/3.6.3/include/python3.6m;
       fi
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
