updated from old pynfft repo to new one

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,7 +71,7 @@ all =
     pywavelets >= 1.0.1
     scikit-image
     cython
-    pyNFFT @ git+ssh://git@github.com/ghisvail/pyNFFT.git@e2da0af#egg=pyNFFT  
+    pyNFFT @ git+ssh://git@github.com:pyNFFT/pyNFFT.git@e2da0af#egg=pyNFFT
 
 
 [options.entry_points]
