DIST: single-source version w/o breaking pip install -e .
Closes #1486

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = odl
-version = attr: odl.__version__
+version = file: VERSION
 description = Operator Discretization Library
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -38,6 +38,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    setuptools >=39.2.0
     future >=0.14
     packaging >=15.0
     numpy >=1.10,!=1.14.0,!=1.14.1,!=1.14.2
@@ -51,7 +52,7 @@ include_package_data = True
 
 [options.packages.find]
 exclude =
-    docs
+    doc
     examples
 
 [options.package_data]
