--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,13 @@
 include CONTRIBUTING.md
 include LICENSE
 include README.md
+include VERSION
 include setup.cfg
 include setup.py
 include odl/pytest.ini
+exclude .*
 recursive-include odl/test test*.py *test.py
+prune conda
+prune doc
 prune examples
+prune tools
