--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = odl
-version = file: VERSION
+version = file: odl/VERSION
 description = Operator Discretization Library
 long_description = file: README.md
 long_description_content_type = text/markdown
