--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,30 @@ language: python
 
 matrix:
     include:
+        # Note: NumPy 1.16 is the last one that supports Python 2.7
         - python: 2.7
-          env: NUMPY_VERSION='1.15.*'
+          env: NUMPY_VERSION='1.16.*'
 
-        - python: 3.6
+        - python: 3.7
           env: NUMPY_VERSION=1.13.3
 
-        - python: 3.6
+        - python: 3.7
           env: NUMPY_VERSION='1.14.*'
 
-        - python: 3.6
+        - python: 3.7
           env: NUMPY_VERSION='1.15.*'
 
-        - python: 3.6
-          env: NUMPY_VERSION='1.15.*' COVERALLS=true
+        - python: 3.7
+          env: NUMPY_VERSION='1.16.*'
 
-        - python: 3.6
-          env: NUMPY_VERSION='1.15.*' SKIP_TESTS=true BUILD_DOCS=true
+        - python: 3.7
+          env: NUMPY_VERSION='1.17.*'
+
+        - python: 3.7
+          env: NUMPY_VERSION='1.16.*' COVERALLS=true
+
+        - python: 3.7
+          env: NUMPY_VERSION='1.16.*' SKIP_TESTS=true BUILD_DOCS=true
 
 sudo: false
 
