Add temp fix for #1514

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,11 +41,12 @@ install_requires =
     setuptools >=39.2.0
     future >=0.14
     packaging >=15.0
-    numpy >=1.10,!=1.14.0,!=1.14.1,!=1.14.2
+    numpy >=1.10, !=1.14.0, !=1.14.1, !=1.14.2
     scipy >=0.14
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
+# pytest upper limit due to https://github.com/odlgroup/odl/issues/1514
 tests_require =
-    pytest >=3.0.3
+    pytest >=3.0.3, <5.1
     coverage >=4.0
     coveralls
 include_package_data = True
@@ -59,17 +60,18 @@ exclude =
 tests = odl/test, odl/pytest.ini
 
 [options.extras_require]
+# pytest upper limit due to https://github.com/odlgroup/odl/issues/1514
 testing =
-    pytest >=3.0.3
+    pytest >=3.0.3, <5.1
     coverage >=4.0
     coveralls
 all =
-    pytest >=3.0.3
+    pytest >=3.0.3, <5.1
     coverage >=4.0
     coveralls
     matplotlib
     pyfftw
-    pywavelets >= 1.0.1
+    pywavelets >=1.0.1
     scikit-image
 
 
