--- a/.travis.yml
+++ b/.travis.yml
@@ -6,25 +6,26 @@ matrix:
         - python: 2.7
           env: NUMPY_VERSION='1.16.*'
 
-        - python: 3.7
+        # Using Python 3.6 as main version due to availability of wheels (SciPy, NumPy, ...)
+        - python: 3.6
           env: NUMPY_VERSION=1.13.3
 
-        - python: 3.7
+        - python: 3.6
           env: NUMPY_VERSION='1.14.*'
 
-        - python: 3.7
+        - python: 3.6
           env: NUMPY_VERSION='1.15.*'
 
-        - python: 3.7
+        - python: 3.6
           env: NUMPY_VERSION='1.16.*'
 
-        - python: 3.7
+        - python: 3.6
           env: NUMPY_VERSION='1.17.*'
 
-        - python: 3.7
+        - python: 3.6
           env: NUMPY_VERSION='1.16.*' COVERALLS=true
 
-        - python: 3.7
+        - python: 3.6
           env: NUMPY_VERSION='1.16.*' SKIP_TESTS=true BUILD_DOCS=true
 
 sudo: false
