--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,31 @@ language: python
 
 matrix:
     include:
+        # Note: NumPy 1.16 is the last one that supports Python 2.7
         - python: 2.7
+          env: NUMPY_VERSION='1.16.*'
+
+        # Using Python 3.6 as main version due to availability of wheels (SciPy, NumPy, ...)
+        - python: 3.6
+          env: NUMPY_VERSION=1.13.3
+
+        - python: 3.6
           env: NUMPY_VERSION='1.14.*'
 
         - python: 3.6
-          env: NUMPY_VERSION=1.10.1
+          env: NUMPY_VERSION='1.15.*'
 
         - python: 3.6
-          env: NUMPY_VERSION='1.12.*'
+          env: NUMPY_VERSION='1.16.*'
 
         - python: 3.6
-          env: NUMPY_VERSION='1.13.*'
+          env: NUMPY_VERSION='1.17.*'
 
         - python: 3.6
-          env: NUMPY_VERSION='1.14.*' COVERALLS=true
+          env: NUMPY_VERSION='1.16.*' COVERALLS=true
 
         - python: 3.6
-          env: NUMPY_VERSION='1.14.*' SKIP_TESTS=true BUILD_DOCS=true
+          env: NUMPY_VERSION='1.16.*' SKIP_TESTS=true BUILD_DOCS=true
 
 sudo: false
 
