TST: add fix for failing pytest.
Due to deprecation in pytest, see #1514 and #1532.

--- a/setup.cfg
+++ b/setup.cfg
@@ -88,6 +88,10 @@ testpaths = odl
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS
 addopts = --doctest-modules
 xfail_strict=true
+# Temporary fix for https://github.com/odlgroup/odl/issues/1514 and
+# https://github.com/odlgroup/odl/issues/1532. Works with pytest<5.1
+filterwarnings =
+    ignore::pytest.PytestDeprecationWarning
 
 [tool:isort]
 # Options: https://github.com/timothycrosley/isort#configuring-isort
