--- a/setup.cfg
+++ b/setup.cfg
@@ -44,9 +44,8 @@ install_requires =
     numpy >=1.13.3, !=1.14.0, !=1.14.1, !=1.14.2
     scipy >=0.14
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
-# pytest upper limit due to https://github.com/odlgroup/odl/issues/1514
 tests_require =
-    pytest >=3.0.3, <5.1
+    pytest >=5.4.0
     coverage >=4.0
     coveralls
 include_package_data = True
@@ -60,13 +59,12 @@ exclude =
 tests = odl/test, odl/pytest.ini
 
 [options.extras_require]
-# pytest upper limit due to https://github.com/odlgroup/odl/issues/1514
 testing =
-    pytest >=3.0.3, <5.1
+    pytest >=5.4.0
     coverage >=4.0
     coveralls
 all =
-    pytest >=3.0.3, <5.1
+    pytest >=5.4.0
     coverage >=4.0
     coveralls
     matplotlib
@@ -82,16 +80,11 @@ pytest11 = odl_plugins=odl.util.pytest_config
 universal = 1
 
 [tool:pytest]
-minversion = 3.0.3
-markers = not benchmark and not largescale
+minversion = 5.4.0
 testpaths = odl
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS
-addopts = --doctest-modules
+addopts = --doctest-modules --strict-markers
 xfail_strict=true
-# Temporary fix for https://github.com/odlgroup/odl/issues/1514 and
-# https://github.com/odlgroup/odl/issues/1532. Works with pytest<5.1
-filterwarnings =
-    ignore::pytest.PytestDeprecationWarning
 
 [tool:isort]
 # Options: https://github.com/timothycrosley/isort#configuring-isort
