Fix pytest dependency for Py2

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,8 @@ install_requires =
     scipy >=0.14
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
 tests_require =
-    pytest >=5.4.0
+    pytest >=3.1, <5.0 ; python_version <= "2.7"
+    pytest >=5.4.0 ; python_version >= "3"
     coverage >=4.0
     coveralls
 include_package_data = True
@@ -60,11 +61,13 @@ tests = odl/test, odl/pytest.ini
 
 [options.extras_require]
 testing =
-    pytest >=5.4.0
+    pytest >=3.1, <5.0 ; python_version <= "2.7"
+    pytest >=5.4.0 ; python_version >= "3"
     coverage >=4.0
     coveralls
 all =
-    pytest >=5.4.0
+    pytest >=3.1, <5.0 ; python_version <= "2.7"
+    pytest >=5.4.0 ; python_version >= "3"
     coverage >=4.0
     coveralls
     matplotlib
@@ -80,7 +83,6 @@ pytest11 = odl_plugins=odl.util.pytest_config
 universal = 1
 
 [tool:pytest]
-minversion = 5.4.0
 testpaths = odl
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS
 addopts = --doctest-modules --strict-markers
