TST: Fix largescale pytest mark issue (#1553)
* TST: Fix largescale pytest mark issue

We change the command-line option to a version recommended in
the pytest docs:
https://docs.pytest.org/en/latest/example/markers.html#custom-marker-and-command-line-option-to-control-test-runs

- A global `suite(name)` mark is registered, that takes a
  name and marks a test as belonging to a specific suite.
- These special suites are opt-in, i.e., not run by default.
- To enable a suite, one adds `-S name` to the pytest
  command-line options.
- Since function-scoped fixtures are handled stricter now,
  the workaround in tensors_test.py didn't work any longer
  (see https://github.com/pytest-dev/pytest/issues/6497).
- We thus set the minimum pytest version to 5.4.0, where the
  fix for the issue is implemented.

Closes: #1514

* Fix testing of examples and sphinx doc similarly

* Fix pytest dependency for Py2

* Add py 3.8 to classifiers

* slow->largescale

* Support multiple test suites in one run

* Correct text regarding examples suite in testing.rst

* Use empty list instead of None as pytest -S default

--- a/odl/pytest.ini
+++ b/odl/pytest.ini
@@ -1,15 +1,10 @@
 [pytest]
-minversion = 3.0.3
-markers = not benchmark and not largescale
 testpaths = odl
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS
-addopts = --doctest-modules
+addopts = --doctest-modules --strict-markers
 xfail_strict=true
 
 # PEP8
 pep8ignore =
     E402
 pep8maxlinelength = 79
-# Temporary fix for https://github.com/odlgroup/odl/issues/1514, works with pytest<5.1
-filterwarnings =
-    ignore::pytest.PytestDeprecationWarning
