--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ install:
     - conda create -n testenv python=$TRAVIS_PYTHON_VERSION nomkl
     - source activate testenv
     # Install packages with pip if possible, it's way faster
-    - pip install "$PIP_2020_DEPENDENCY_RESOLVER_FLAG" "numpy==$NUMPY_VERSION" scipy future packaging scikit-image pywavelets;
+    - pip install $PIP_2020_DEPENDENCY_RESOLVER_FLAG "numpy==$NUMPY_VERSION" scipy future packaging scikit-image pywavelets;
     # Building pyfftw wheels sometimes fails, using a conda-forge version instead;
     # To avoid a lower version of NumPy being installed over the pip one, we exclude all dependencies
     # (PyFFTW only depends on NumPy)
