Update maintainers in Conda metadata.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -52,5 +52,8 @@ about:
 
 extra:
     maintainers:
-        - Jonas Adler (@adler-j)
-        - Holger Kohr (@kohr-h)
+        - Ozan Öktem (@ozanoktem)
+        - Justus Sagemüller (@leftaroundabout)
+        - Emilien Valat (@Emvlt)
+        # - Jonas Adler (@adler-j)
+        # - Holger Kohr (@kohr-h)
