--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -15,30 +15,30 @@ build:
 
 requirements:
     build:
-        - python
-        - setuptools
+        - python >=3.7
+        - setuptools >=65.6
 
     host:
         - python
         - setuptools
         - nomkl # [not win]
-        - future >=0.14
-        - numpy >=1.13.3
-        - scipy >=0.14
-        - packaging >=15.0
+        - future >=0.16
+        - numpy >=1.19
+        - scipy >=1.1
+        - packaging >=17.0
 
     run:
         - python
-        - future >=0.14
-        - numpy >=1.13.3
-        - scipy >=0.14
-        - packaging >=15.0
-        - matplotlib
+        - future >=0.16
+        - numpy >=1.19
+        - scipy >=1.1
+        - packaging >=17.0
+        - matplotlib >=3.4
 
 test:
     requires:
         - nomkl # [not win]
-        - pytest >=3.0.3,<5.1
+        - pytest >=5.4
     imports:
         - odl
     commands:
