--- a/setup.cfg
+++ b/setup.cfg
@@ -27,26 +27,24 @@ classifiers =
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Libraries :: Python Modules
     License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.5
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Operating System :: OS Independent
 
 [options]
 packages = find:
 install_requires =
-    setuptools >=39.2.0
-    future >=0.14
-    packaging >=15.0
-    numpy >=1.13.3, !=1.14.0, !=1.14.1, !=1.14.2
-    scipy >=0.14
-python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
+    setuptools >=65.6
+    future >=0.16
+    packaging >=17.0
+    numpy >=1.19
+    scipy >=1.1
+python_requires = >=3.7
 tests_require =
-    pytest >=3.1, <5.0 ; python_version <= "2.7"
     pytest >=5.4.0 ; python_version >= "3"
     coverage >=4.0
     coveralls
