--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -10,39 +10,31 @@ source:
     # path: ..  # for builds from local source (no download)
 
 build:
+    noarch: python
     number: 0
-    # noarch_python: True
 
 requirements:
-    build:
-        - python >=3.7
-        - setuptools >=65.6
+  host:
+    - python >=3.7
+    - pip
+    - setuptools >=65.6
 
-    host:
-        - python
-        - setuptools
-        - nomkl # [not win]
-        - future >=0.16
-        - numpy >=1.19
-        - scipy >=1.1
-        - packaging >=17.0
-
-    run:
-        - python
-        - future >=0.16
-        - numpy >=1.19
-        - scipy >=1.1
-        - packaging >=17.0
-        - matplotlib >=3.4
+  run:
+    - python >=3.7
+    - setuptools <76.0
+    - future >=0.16
+    - numpy >=1.19, <1.27
+    - scipy >=1.1
+    - packaging >=17.0
+    - matplotlib-base >=3.4
 
 test:
-    requires:
-        - nomkl # [not win]
-        - pytest >=5.4
-    imports:
-        - odl
-    commands:
-        - python -c "import odl; odl.test()"
+  requires:
+    - pytest >=5.4
+  imports:
+    - odl
+  commands:
+    - python -c "import odl; odl.test()"
 
 about:
     home: https://github.com/odlgroup/odl
