Constrain the PyTest version.
This is a workaround to a very small problem with pytest-8,
https://github.com/odlgroup/odl/issues/1670

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ install_requires =
     scipy >=1.1
 python_requires = >=3.7
 tests_require =
-    pytest >=5.4.0 ; python_version >= "3"
+    pytest >=5.4.0, <8.0
     coverage >=4.0
     coveralls
 include_package_data = True
@@ -61,12 +61,12 @@ tests = odl/test, odl/pytest.ini
 [options.extras_require]
 testing =
     pytest >=3.1, <5.0 ; python_version <= "2.7"
-    pytest >=5.4.0 ; python_version >= "3"
+    pytest >=5.4.0, <8.0 ; python_version >= "3"
     coverage >=4.0
     coveralls
 all =
     pytest >=3.1, <5.0 ; python_version <= "2.7"
-    pytest >=5.4.0 ; python_version >= "3"
+    pytest >=5.4.0, <8.0 ; python_version >= "3"
     coverage >=4.0
     coveralls
     matplotlib
