--- a/setup.cfg
+++ b/setup.cfg
@@ -41,8 +41,8 @@ install_requires =
     setuptools >=65.6
     future >=0.16
     packaging >=17.0
-    numpy >=1.19, <1.27
-    scipy >=1.1
+    numpy >2
+    scipy >=1.15
 python_requires = >=3.7
 tests_require =
     pytest >=5.4.0 ; python_version >= "3"
@@ -71,9 +71,8 @@ all =
     coveralls
     matplotlib
     pyfftw
-    pywavelets >=1.0.1
-    scikit-image
-
+    pywavelets >=1.8
+    scikit-image >= 0.25
 
 [options.entry_points]
 pytest11 = odl_plugins=odl.util.pytest_config
