Explicitly exclude the non-python-source directories for pypi release.
The excluded directories are needed because the 'package' field is set to `find`, which can cause
problems if it finds files in directories that are not part of the actual odl package.

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,8 @@ include_package_data = True
 exclude =
     doc
     examples
+    conda
+    tools
 
 [options.package_data]
 tests = odl/test, odl/pytest.ini
