--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,8 +12,8 @@ build:
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
-   configuration: docs/conf.py
+   configuration: docs/source/conf.py
 
 python:
    install:
-   - requirements: docs/requirements.txt
+   - requirements: docs/source/requirements.txt
