--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,9 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.13"
+  jobs:
+    pre_build:
+      - python docs/source/generate_doc.py
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
