--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ install_requires =
     setuptools >=65.6
     future >=0.16
     packaging >=17.0
-
+    array-api-compat >=1.12
     numpy >=2.3
     scipy >=1.15
 
@@ -77,6 +77,7 @@ all =
     pyfftw
     pywavelets >=1.8
     scikit-image >= 0.25
+    astra >=2.4
 
 [options.entry_points]
 pytest11 = odl_plugins=odl.core.util.pytest_config
