--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,9 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.13"
+  jobs:
+    pre_build:
+      - python docs/source/generate_doc.py --output docs/source/
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
@@ -16,4 +19,4 @@ sphinx:
 
 python:
    install:
-   - requirements: docs/source/requirements.txt
+   - requirements: docs/requirements.txt
