--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ build:
     python: "3.13"
   jobs:
     pre_build:
-      - python docs/source/generate_doc.py --output docs/source/
+      - python docs/source/generate_doc.py
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
