--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -17,11 +17,12 @@ requirements:
     - setuptools >=65.6
 
   run:
-    - python >=3.7
+    - python >=3.11
     - setuptools <76.0
     - future >=0.16
-    - numpy >=2.1, <2.2
-    - scipy >=1.1
+    - numpy >=2.3, <2.4
+    - array-api-compat >=1.12
+    - scipy >=1.15
     - packaging >=17.0
     - matplotlib-base >=3.4
 
