--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
     future >=0.16
     packaging >=17.0
     array-api-compat >=1.12
-    numpy >=2.3
+    numpy =2.3
     scipy >=1.15
 
 python_requires = >=3.11
@@ -78,6 +78,7 @@ all =
     pywavelets >=1.8
     scikit-image >= 0.25
     astra >=2.4
+    torch =2.9
 
 [options.entry_points]
 pytest11 = odl_plugins=odl.core.util.pytest_config
