--- a/.github/workflows/test_pull_request.yml
+++ b/.github/workflows/test_pull_request.yml
@@ -10,7 +10,7 @@ name: Test Pull Request
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, ready_for_review]
 
 permissions:
   contents: read
