Short of a virtualenv, the CI needs to run uv pip in the system environment.
It seems a bit weird to me to even consider any environments here, given
that the main (IMO) point of UV is to avoid them. But apperently when
using `uv pip`, as needed for running `uv pytest`, this is necessary again.

https://docs.astral.sh/uv/guides/integration/github/#using-uv-pip

--- a/.github/workflows/test_pull_request.yml
+++ b/.github/workflows/test_pull_request.yml
@@ -40,3 +40,5 @@ jobs:
           uv pip install pytest
           uv pip install dist/*.whl
           uv run pytest src/odl/test
+        env:
+          UV_SYSTEM_PYTHON: 1
